# nanobind-minimal

./: .gitignore  CMakeLists.txt  README.md  environment.build.yml  environment.yml  pyproject.toml
.github/workflows/: ci-build.yaml
cmake/: CMakeLists.txt
conda/: bld.bat  build.sh  copy_files.bat  meta.yaml
src/: my_ext.cpp  nano_min.cpp
src/my_ext/: __init__.py
src/nano_min/: __init__.py
tests/: test_basic.py
