[build-system]
requires = [
    "scikit-build-core",
    "nanobind>=1.1.0"
]

build-backend = "scikit_build_core.build"

[project]
name = "my_ext"
version = "0.0.1"
authors = [
    { name = "Kristoffer H. Andersen", email = "kristoffer_andersen@outlook.com" },
]
description = "A minimal cpp library for nanobind"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/Krande/nanobind-minimal"
"Bug Tracker" = "https://github.com/Krande/nanobind-minimal/issues"

[tool.scikit-build]
# https://scikit-build.readthedocs.io/en/latest/generators.html#default-deployment-target-and-architecture
cmake.args = ["-DCMAKE_OSX_DEPLOYMENT_TARGET:STRING=10.14"]
cmake.verbose = true

build-dir = "build/{wheel_tag}"

# This is the only editable mode currently
editable.mode = "redirect"

wheel.packages = ["src/my_ext"]
wheel.install-dir = "my_ext"