[build-system]
requires = [
    "scikit-build-core",
    "nanobind>=1.1.0"
]

build-backend = "scikit_build_core.build"

[project]
name = "nano-min"
version = "0.0.1"
authors = [
    { name = "Kristoffer H. Andersen", email = "kristoffer_andersen@outlook.com" },
]
description = "A minimal cpp library for nanobind"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/Krande/nanobind-minimal"
"Bug Tracker" = "https://github.com/Krande/nanobind-minimal/issues"

[tool.scikit-build]
# NanoBind uses features only available on macOS 10.14 or newer
# error: aligned deallocation function of type 'void (void *, std::align_val_t) noexcept'
# is only available on macOS 10.14 or newer
# Therefore, we set the deployment target to 10.14
# https://scikit-build.readthedocs.io/en/latest/generators.html#default-deployment-target-and-architecture
cmake.args = ["-DCMAKE_OSX_DEPLOYMENT_TARGET:STRING=10.14", "-Wno-dev"]
cmake.verbose = true
cmake.build-type = "Debug"

build-dir = "build/{wheel_tag}"

# This is the only editable mode currently
editable.mode = "redirect"

wheel.packages = ["src/nano_min"]
wheel.install-dir = "nano_min"